[package]
name = "casper_event"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Library for developing Casper smart contracts with event."
authors = ["Murasame <me@murasame.moe>"]
keywords = ["casper", "blockchain", "smart_contract"]
homepage = "https://casper.network"
repository = "https://github.com/Murasame233/casper-event"
readme = "../README.md"

[dependencies]
casper-contract = "1.3.3"
casper-types = "1.3.3"

[profile.release]
codegen-units = 1
lto = true

